# securesyncer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.cfg
autopecs/: main.py  style.css
securesyncer/: aesgcm.py  main.py  mainwindow.py  settings_dialog.py  style.css
tests/: test_main_window.py
