[build-system]
requires = ["setuptools>=58.2.0", "wheel>=0.37.1"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "autopecs"
version = "0.1.0"
description = "Automatically format Python code with PEP8 style guide."
authors = [{ name = "Ashraful Firoz", email = "ashraf.akon201@gmail.com" }]
license = "MIT"
homepage = "https://github.com/ashrafakon/autopecs"
repository = "https://github.com/ashrafakon/autopecs.git"
dependencies = { python = "^3.9", PyQt6 = "^6.1.0" }
dev-dependencies = { pytest = "^6.2.4", black = "^21.9b0" }
