[tool.poetry]
name = "securesyncer"
version = "0.1.0"
description = "Automatically encryptes all files in one directory and saves to another for cloud sync"
authors = ["Ashraful Firoz <ashraf.akon201@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyqt6 = "^6.5.0"
cryptography = "^40.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

