[metadata]
name = autopecs
version = 0.1.0
author = Ashraful Firoz
author_email = ashraf.akon201@gmail.com
description = Automatically encrypt and sync sensitive files
license = MIT
url = https://github.com/ashrafakon/autopecs

[options]
packages = autopecs
install_requires =
    PyQt6

[options.entry_points]
console_scripts =
    autopecs = autopecs.main:main
