[metadata]
name = securesyncer
version = 0.1.0
author = Ashraful Firoz
author_email = ashraf.akon201@gmail.com
description = Automatically encrypt and sync sensitive files
license = MIT
url = https://github.com/ashrafakon/securesyncer

[options]
packages = securesyncer
install_requires =
    PyQt6
    cryptography

[options.entry_points]
console_scripts =
    securesyncer = securesyncer.main:main